# taxmind-light

./: .dockerignore  .env.prod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LESSONS_LEARNED.md  README.md  TASKS_POS10USERS.md  VALIDACAO_SPRINT5.md  admin.py  auth.py  conftest.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  redeploy.sh  requirements-dev.txt  requirements-legacy.txt  requirements.txt
db/: init.sql  migration_consolidate_6steps.sql  migration_sprint5.sql  migration_usage.sql
docs/: CITATION_CONTRACT.md  DATA_BOUNDARY.md  DEPLOY_REFERENCE.md  DOMAIN_FISCAL.md  FEEDBACK_LOOP.md  HARNESS_METRICS.md  IN_PROGRESS.md  PROTOCOL_P1_P6.md  QUALITY_SCORECARD.md  RAG_ARCHITECTURE.md  SCHEMA_REFERENCE.md
frontend/: .env.production  Dockerfile
landing/: index.html
migrations/: 100_users_table.sql  101_uuid_cases_outputs.sql  102_metodos_analise.sql  105_contra_tese.sql  108_simulacoes.sql  109_monitoramento_p6.sql  111_legal_hold_log.sql  112_remissao_idx.sql  113_heuristicas.sql  114_criticidade.sql  115_mau_metering.sql  118_uuid_cases_outputs.sql  125_reset_password_token.sql  126_uuid_cases_outputs_swap.sql  128_cases_tenant_id_limits.sql  129_api_usage_tenant.sql  131_trial_5_days.sql  133_rls_policies.sql  134_rls_api_usage.sql  136_token_budget_index.sql
nginx/: host-nginx-orbis.tax.conf  nginx.conf
scripts/: install_token_savers.sh  pre_deploy_check.sh  quality_scorecard.sh  stress_baseline.sh  stress_monitor.sh  validacao.py  validacao_sprint2.py
skills/: debug-regression.md  diagnose-bug.md  (+8 more)
(+194 files in other folders)
