[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orbis-tax"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    "ui/",
    "admin.py",
    ".venv/",
    "migrations/",
    "frontend/",
    "__pycache__/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = [
    "E501",   # line too long — muitas violações iniciais
    "F401",   # unused imports — muitos módulos de compatibilidade
    "E402",   # module level import not at top of file
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
